--- a/Portfolio.html
+++ b/Portfolio.html
@@ -109,12 +109,12 @@
       <!-- Header/Home -->
       <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo">
-          <span class="w3-hide-small">I'm</span> John Doe.
+          <span class="w3-hide-small">I'm</span> Kerry Qian.
         </h1>
-        <p>Photographer and Web Designer.</p>
+        <p>Computational Designer.</p>
         <img
-          src="/w3images/man_smoke.jpg"
-          alt="boy"
+          src="Profile.jpg"
+          alt="pic"
           class="w3-image"
           width="992"
           height="1108"
@@ -123,22 +123,14 @@
 
       <!-- About Section -->
       <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-text-light-grey">My Name</h2>
+        <h2 class="w3-text-light-grey">About me</h2>
         <hr style="width: 200px" class="w3-opacity" />
         <p>
-          Some text about me. Some text about me. I am lorem ipsum consectetur
-          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          I studied Computational design at the University of New South Wales
+          and graduated in 2023 with a Weighted Average Mark of 82. I am keen on
         </p>
         <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
-        <p class="w3-wide">Photography</p>
+        <p class="w3-wide">Grasshopper / Rhino</p>
         <div class="w3-white">
           <div class="w3-dark-grey" style="height: 28px; width: 95%"></div>
         </div>
@@ -289,20 +281,20 @@
             <i
               class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"
             ></i>
-            Chicago, US
+            Sydney, Australia
           </p>
           <p>
             <i
               class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"
             ></i>
-            Phone: +00 151515
+            Phone: +61 478540545
           </p>
           <p>
             <i
               class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"
             >
             </i>
-            Email: mail@mail.com
+            Email: kerryqian@hotmail.com
           </p>
         </div>
         <br />
