--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Computational Designer</h2>
     <h3>About Me</h3>
     <p>
-      I am currently in my final year of studing a bachelors of Computational
+      I am currently in my final year of studying a Bachelors of Computational
       Design at the University of New South Wales. If you wish to find out more
       about my experience and qualifications, here is my resume!
     </p>
