added profile pic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
   <body>
     <h1>Hi, I'm Kerry</h1>
+
     <h2>Computational Designer</h2>
+    <img src="Profile.jpg" />
     <h3>About Me</h3>
     <p>
       I am currently in my final year of studying a Bachelors of Computational
