--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <p>
       I am currently in my final year of studying a Bachelors of Computational
       Design at the University of New South Wales. If you wish to find out more
-      about my experience and qualifications, here is my resume!
+      about my experience and qualifications, here is my
+      <a target="_blank" href="Kerry- Resume.pdf">resume</a>!
     </p>
     <h3>Projects</h3>
     <h4>Land Greening</h4>
@@ -30,8 +31,13 @@
     <h3>Get in touch</h3>
     <p>
       <b>Email:</b> kerryqian@hotmail.com <br />
-      <b>Linkedin:</b> https://www.linkedin.com/in/kerryqian/ <br />
-      <b>GitHub:</b> https://github.com/KerryQian
+      <b>Linkedin:</b>
+      <a href="https://www.linkedin.com/in/kerryqian/"
+        >https://www.linkedin.com/in/kerryqian/</a
+      >
+      <br />
+      <b>GitHub:</b>
+      <a href="https://github.com/KerryQian">https://github.com/KerryQian </a>
     </p>
   </body>
 </html>
