--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, inital-scale=1" />
     <title>Kerry Qian- Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="Profile.jpg" />
   </head>
 
   <body>
@@ -19,7 +20,7 @@
       I am currently in my final year of studying a Bachelors of Computational
       Design at the University of New South Wales. If you wish to find out more
       about my experience and qualifications, here is my
-      <a target="_blank" href="Kerry- Resume.pdf">resume</a>!
+      <a href="Kerry- Resume.pdf">resume</a>!
     </p>
     <h3>Projects</h3>
     <h4>Land Greening</h4>
