--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       I am currently in my final year of studying a Bachelors of Computational
       Design at the University of New South Wales. If you wish to find out more
       about my experience and qualifications, here is my
-      <a href="Kerry- Resume.pdf">resume</a>!
+      <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
     </p>
     <h3>Projects</h3>
     <h4>Land Greening</h4>
