open all links in new tab

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
     <p>
       <b>Email:</b> kerryqian@hotmail.com <br />
       <b>Linkedin:</b>
-      <a href="https://www.linkedin.com/in/kerryqian/"
+      <a target="_blank" href="https://www.linkedin.com/in/kerryqian/"
         >https://www.linkedin.com/in/kerryqian/</a
       >
       <br />
       <b>GitHub:</b>
-      <a href="https://github.com/KerryQian">https://github.com/KerryQian </a>
+      <a target="_blank" href="https://github.com/KerryQian"
+        >https://github.com/KerryQian
+      </a>
     </p>
   </body>
 </html>
