--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Hi, I'm Kerry</h1>
+    <h1>Hi, <br />I'm Kerry</h1>
 
     <h2>Computational Designer</h2>
     <img src="Profile.jpg" />
