--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <!-- vvv making sure aspect ratio stays the same no mater what device its being viewed from vvv -->
     <meta name="viewport" content="width=device-width, inital-scale=1" />
+    <meta http-equiv="“X-UA-Compatible”" content="“ie" ="edge”" />
     <title>Kerry Qian- Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/x-icon" href="Profile.jpg" />
   </head>
 
