--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   </head>
 
   <body>
-    <h1>Hi, <br />I'm Kerry</h1>
+    <div class="titleblock">
+      <h1>Hi, <br />I'm Kerry</h1>
+      <h2>Computational Designer</h2>
+    </div>
 
-    <h2>Computational Designer</h2>
     <img src="Profile.jpg" />
+
     <h3>About Me</h3>
     <p>
       I am currently in my final year of studying a Bachelors of Computational
