--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <body>
     <div class="titleblock">
       <h1>Hi, <br />I'm Kerry</h1>
+      <hr />
+      <hr />
+      <div class="spacer"></div>
       <h2>Computational Designer</h2>
+      <div class="spacer"></div>
+      <div class="spacer"></div>
     </div>
-
+    <div class="spacer"></div>
     <img src="Profile.jpg" />
 
     <h3>About Me</h3>
@@ -47,5 +52,5 @@
       </a>
     </p>
   </body>
-  <footer>Last updated on: April 2023 tesintg</footer>
+  <footer>Last updated on: April 2023</footer>
 </html>
