--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
       </a>
     </p>
   </body>
-  <footer>Last updated on: April 2023</footer>
+  <footer>Last updated on: 2:07am April 2023</footer>
 </html>
