--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     <img src="Profile.jpg" />
 
     <h3>About Me</h3>
-    <p>
-      I am currently in my final year of studying a Bachelors of Computational
-      Design at the University of New South Wales. If you wish to find out more
-      about my experience and qualifications, here is my
-      <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
-    </p>
+    <div class="container">
+      <p>
+        I am currently in my final year of studying a Bachelors of Computational
+        Design at the University of New South Wales. If you wish to find out
+        more about my experience and qualifications, here is my
+        <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
+      </p>
+    </div>
     <h3>Projects</h3>
     <h4>Land Greening</h4>
     <h4>Stadium roof design</h4>
