--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
   <body>
     <div class="titleblock">
+      <div class="spacer"></div>
+      <div class="spacer"></div>
       <h1>Hi, <br />I'm Kerry</h1>
       <hr />
       <hr />
+      <div class="spacer"></div>
+      <div class="spacer"></div>
       <div class="spacer"></div>
       <h2>Computational Designer</h2>
       <div class="spacer"></div>
@@ -23,7 +27,7 @@
     </div>
     <div class="spacer"></div>
     <img src="Profile.jpg" />
-
+    <div class="spacer"></div>
     <h3>About Me</h3>
     <div class="container">
       <p>
@@ -33,13 +37,19 @@
         <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
       </p>
     </div>
+    <div class="spacer"></div>
+    <div class="spacer"></div>
     <h3>Projects</h3>
-    <h4>Land Greening</h4>
-    <h4>Stadium roof design</h4>
-    <h4>Precinct analysis</h4>
-    <h4>Urban generative design</h4>
-    <h4>Large-scale clay 3D printing</h4>
-    <h4>Digital Fabrication</h4>
+    <div class="image-grid">
+      <img src="Profile.jpg" alt="Land Greening" />
+      <img src="Profile.jpg" alt="Land Greening" />
+      <img src="Profile.jpg" alt="Land Greening" />
+      <img src="Profile.jpg" alt="Land Greening" />
+      <img src="Profile.jpg" alt="Land Greening" />
+      <img src="Profile.jpg" alt="Land Greening" />
+    </div>
+    <div class="spacer"></div>
+    <div class="spacer"></div>
     <h3>Get in touch</h3>
     <p>
       <b>Email:</b> kerryqian@hotmail.com <br />
