--- a/index.html
+++ b/index.html
@@ -40,14 +40,44 @@
     <div class="spacer"></div>
     <div class="spacer"></div>
     <h3>Projects</h3>
-    <div class="image-grid">
-      <img src="Profile.jpg" alt="Land Greening" />
-      <img src="Profile.jpg" alt="Land Greening" />
-      <img src="Profile.jpg" alt="Land Greening" />
-      <img src="Profile.jpg" alt="Land Greening" />
-      <img src="Profile.jpg" alt="Land Greening" />
-      <img src="Profile.jpg" alt="Land Greening" />
+    <div class="row">
+      <div class="column">
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/144/200" style="width: 100%"
+        /></a>
+        <p>Land Greening</p>
+
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/65/200" style="width: 100%"
+        /></a>
+        <p>Stadium Roof Design</p>
+      </div>
+
+      <div class="column">
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/63/200" style="width: 100%"
+        /></a>
+        <p>Precinct analysis</p>
+
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/59/200" style="width: 100%"
+        /></a>
+        <p>Generative urban design</p>
+      </div>
+
+      <div class="column">
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/63/200" style="width: 100%"
+        /></a>
+        <p>Large-scale clay 3D printing</p>
+
+        <a href="https://community.rstudio.com" target="_blank">
+          <img src="https://picsum.photos/id/59/200" style="width: 100%"
+        /></a>
+        <p>Digital Fabrications</p>
+      </div>
     </div>
+
     <div class="spacer"></div>
     <div class="spacer"></div>
     <h3>Get in touch</h3>
