--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h3>Projects</h3>
     <div class="row">
       <div class="column">
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="LandGreening.html" target="_blank">
           <img src="https://picsum.photos/id/144/200" style="width: 100%"
         /></a>
         <p>Land Greening</p>
