land greening "about"

--- a/LandGreening.html
+++ b/LandGreening.html
@@ -16,6 +16,33 @@
   </head>
 
   <body>
-    asdkfsadkl;fjasdlkfas
+    <div class="titleblock">
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+      <h1>Land Greening</h1>
+      <hr />
+      <hr />
+      <div class="spacer"></div>
+      <h2>In collaboration with Greening Australia</h2>
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+    </div>
+    <h3 style="text-align: left; margin-left: 20px">About</h3>
+    <p style="text-align: left; margin-left: 20px">
+      This project was a collaboration with Greening Australia, a non-profit
+      organisation who's main goal is to restore and protect Australia's
+      biodiversity. Our main goal for this project was to produce a prototype
+      tool in grasshoper that would allow for users to see how the growth of
+      vegetation (grass, bushes, & trees) would affect their land in terms of
+      visual, and thermal comfort. Within the project, I was in charge of the
+      modelling of vegetation growth as well as the generation of topography for
+      the vegetation to grow from.
+      <br /><br />
+      The modelling of the vegetation required that it would be possible to
+      simulate the growth of vegetation on land within any set timeframe ranging
+      from a sappling to a fully mature tree. In addition to this, I was also
+      tasked with generating a topography of land given land lines and from
+      there, simulate the seeding and growing of vegetation.
+    </p>
   </body>
 </html>
