--- a/LandGreening.html
+++ b/LandGreening.html
@@ -27,8 +27,8 @@
       <div class="spacer"></div>
       <div class="spacer"></div>
     </div>
-    <h3 style="text-align: left; margin-left: 20vh">About</h3>
-    <p style="text-align: left; margin-left: 20vh">
+    <h3 style="text-align: left; margin-left: 35vh">About</h3>
+    <p style="text-align: left; margin-left: 35vh; margin-right: 35vh">
       This project was a collaboration with Greening Australia, a non-profit
       organisation who's main goal is to restore and protect Australia's
       biodiversity. Our main goal for this project was to produce a prototype
