--- a/LandGreening.html
+++ b/LandGreening.html
@@ -42,7 +42,7 @@
       simulate the growth of vegetation on land within any set timeframe ranging
       from a sappling to a fully mature tree. In addition to this, I was also
       tasked with generating a topography of land given land lines and from
-      there, simulate the seeding and growing of vegetation.
+      there, simulate the seeding and growing of the vegetation.
     </p>
   </body>
 </html>
