--- a/LandGreening.html
+++ b/LandGreening.html
@@ -40,5 +40,8 @@
       tasked with generating a topography of land given land lines and from
       there, simulate the seeding and growing of the vegetation.
     </p>
+    <div class="spacer"></div>
+    <div class="spacer"></div>
+    <hr />
   </body>
 </html>
