--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+    <div class="topnav">
+      <a class="active" href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </div>
+
     <div class="titleblock">
       <div class="spacer"></div>
       <div class="spacer"></div>
@@ -20,79 +26,54 @@
       <hr />
       <div class="spacer"></div>
       <div class="spacer"></div>
-      <div class="spacer"></div>
       <h2>Computational Designer</h2>
       <div class="spacer"></div>
       <div class="spacer"></div>
     </div>
     <div class="spacer"></div>
+    <div class="spacer"></div>
     <img src="Profile.jpg" />
     <div class="spacer"></div>
+    <hr />
     <h3>About Me</h3>
     <div class="container">
       <p>
         I am currently in my final year of studying a Bachelors of Computational
-        Design at the University of New South Wales. If you wish to find out
-        more about my experience and qualifications, here is my
+        Design at the University of New South Wales. Heres a little bit about
+        me: <br />
+        <div class="container" style="text-align: left;">
+        Interests: <br>
+          <ul>
+            <li>AR / VR</li>
+            <li>AI</li>
+            <li>Generative Design</li>
+            <li>Digital Fabrication</li>
+            <li>Problem solving</li>
+            <li>Urban Planning</li>
+            <li>Big data</li>
+          </ul>
+          Hobbies:
+          <ul>
+            <li>Piano</li>
+            <li>Basketball</li>
+            <li>Video Games</li>
+            <li>Gym</li>
+            <li>Travelling</li>
+          </ul>
+        </div>
+        If you wish to find out more about my experience and qualifications,
+        here is my
         <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
       </p>
     </div>
     <div class="spacer"></div>
+    <hr />
     <div class="spacer"></div>
-    <h3>Projects</h3>
-    <div class="row">
-      <div class="column">
-        <a href="LandGreening.html" target="_blank">
-          <img src="https://picsum.photos/id/144/200" style="width: 100%"
-        /></a>
-        <p>Land Greening</p>
-
-        <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/65/200" style="width: 100%"
-        /></a>
-        <p>Stadium Roof Design</p>
-      </div>
-
-      <div class="column">
-        <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/63/200" style="width: 100%"
-        /></a>
-        <p>Precinct analysis</p>
-
-        <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/59/200" style="width: 100%"
-        /></a>
-        <p>Generative urban design</p>
-      </div>
-
-      <div class="column">
-        <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/63/200" style="width: 100%"
-        /></a>
-        <p>Large-scale clay 3D printing</p>
-
-        <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/59/200" style="width: 100%"
-        /></a>
-        <p>Digital Fabrications</p>
-      </div>
-    </div>
+    <div class="spacer"></div>
+    
 
     <div class="spacer"></div>
     <div class="spacer"></div>
-    <h3>Get in touch</h3>
-    <p>
-      <b>Email:</b> kerryqian@hotmail.com <br />
-      <b>Linkedin:</b>
-      <a target="_blank" href="https://www.linkedin.com/in/kerryqian/"
-        >https://www.linkedin.com/in/kerryqian/</a
-      >
-      <br />
-      <b>GitHub:</b>
-      <a target="_blank" href="https://github.com/KerryQian"
-        >https://github.com/KerryQian
-      </a>
-    </p>
   </body>
   <footer>Last updated on: April 2023</footer>
 </html>
