--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
+      <a class="active" href="contact.html">Contact</a>
     </div>
 
     <div class="titleblock">
