--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
+      <a href="index.html">Home</a>
+      <a class="active" href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </div>
 
