land greening page

--- a/LandGreening.html
+++ b/LandGreening.html
@@ -12,6 +12,11 @@
   </head>
 
   <body>
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a class="active" href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </div>
     <div class="titleblock">
       <div class="spacer"></div>
       <div class="spacer"></div>
