--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,10 @@
       <div class="spacer"></div>
       <div class="spacer"></div>
       <h1>Projects</h1>
+      <hr />
+      <hr />
+      <div class="spacer"></div>
+      <h2>Some of my projects and notable works</h2>
       <div class="spacer"></div>
     </div>
     <div class="spacer"></div>
@@ -29,24 +33,24 @@
     <div class="spacer"></div>
     <div class="row">
       <div class="column">
-        <a href="LandGreening.html" target="_blank">
+        <a href="LandGreening.html">
           <img src="https://picsum.photos/id/144/200" style="width: 100%"
         /></a>
         <p>Land Greening</p>
 
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="https://community.rstudio.com">
           <img src="https://picsum.photos/id/65/200" style="width: 100%"
         /></a>
         <p>Stadium Roof Design</p>
       </div>
 
       <div class="column">
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="precinct.html">
           <img src="https://picsum.photos/id/63/200" style="width: 100%"
         /></a>
         <p>Precinct analysis</p>
 
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="https://community.rstudio.com">
           <img src="https://picsum.photos/id/59/200" style="width: 100%"
         /></a>
         <p>Generative urban design</p>
