--- a/projects.html
+++ b/projects.html
@@ -34,36 +34,48 @@
     <div class="row">
       <div class="column">
         <a href="LandGreening.html">
-          <img src="https://picsum.photos/id/144/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1379/1379320.png"
+            style="width: 100%"
         /></a>
-        <p>Land Greening</p>
+        <p>Digital modelling</p>
 
         <a href="https://community.rstudio.com">
-          <img src="https://picsum.photos/id/65/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/10308/10308346.png"
+            style="width: 100%"
         /></a>
-        <p>Stadium Roof Design</p>
+        <p>Engineering</p>
       </div>
 
       <div class="column">
         <a href="precinct.html">
-          <img src="https://picsum.photos/id/63/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/269/269049.png"
+            style="width: 100%"
         /></a>
-        <p>Precinct analysis</p>
+        <p>Coding</p>
 
         <a href="https://community.rstudio.com">
-          <img src="https://picsum.photos/id/59/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/10247/10247167.png"
+            style="width: 100%"
         /></a>
-        <p>Generative urban design</p>
+        <p>Urban</p>
       </div>
 
       <div class="column">
         <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/63/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1723/1723713.png"
+            style="width: 100%"
         /></a>
         <p>Large-scale clay 3D printing</p>
 
         <a href="https://community.rstudio.com" target="_blank">
-          <img src="https://picsum.photos/id/59/200" style="width: 100%"
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/8932/8932109.png"
+            style="width: 100%"
         /></a>
         <p>Digital Fabrications</p>
       </div>
