--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,20 @@
 
   <body>
     <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
       <a class="active" href="contact.html">Contact</a>
+      <a href="projects.html">Projects</a>
+      <a href="index.html">Home</a>
     </div>
 
     <div class="titleblock">
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+      <div class="spacer"></div>
       <h1>Get in touch</h1>
+      <div class="spacer"></div>
     </div>
+    <br /><br />
+    Feel free to contact me in any of the following ways.<br /><br />
     <hr />
     <p>
       <b>Email:</b> kerryqian@hotmail.com <br />
