--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
+      
       <a href="contact.html">Contact</a>
+      <a href="projects.html">Projects</a>
+      <a class="active" href="index.html">Home</a>
     </div>
 
     <div class="titleblock">
@@ -40,27 +41,19 @@
       <p>
         I am currently in my final year of studying a Bachelors of Computational
         Design at the University of New South Wales. Heres a little bit about
-        me: <br />
-        <div class="container" style="text-align: left;">
-        Interests: <br>
-          <ul>
-            <li>AR / VR</li>
-            <li>AI</li>
-            <li>Generative Design</li>
-            <li>Digital Fabrication</li>
-            <li>Problem solving</li>
-            <li>Urban Planning</li>
-            <li>Big data</li>
-          </ul>
-          Hobbies:
-          <ul>
-            <li>Piano</li>
-            <li>Basketball</li>
-            <li>Video Games</li>
-            <li>Gym</li>
-            <li>Travelling</li>
-          </ul>
-        </div>
+        me: <br /><br>
+        <table style="width:100%">
+          <tr>
+            <th>Interests</th>
+            <th>Hobbies</th>
+          </tr>
+          <tr>
+            <td>AI <br>AR / VR<br>Big data<br>Digital fabrication<br>Generative desgin<br>Problem solving<br>Urban design</td>
+            <td>Piano<br>Basketball<br>Video games<br>Gym<br>Travelling</td>
+          </tr>
+          
+        </table>
+        <br><br>
         If you wish to find out more about my experience and qualifications,
         here is my
         <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
