--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         /></a>
         <p>Digital modelling</p>
 
-        <a href="https://community.rstudio.com">
+        <a href="eng.html">
           <img
             src="https://cdn-icons-png.flaticon.com/512/10308/10308346.png"
             style="width: 40%"
@@ -49,14 +49,14 @@
       </div>
 
       <div class="column">
-        <a href="precinct.html">
+        <a href="code.html">
           <img
             src="https://cdn-icons-png.flaticon.com/512/269/269049.png"
             style="width: 40%"
         /></a>
         <p>Coding</p>
 
-        <a href="https://community.rstudio.com">
+        <a href="precinct.html">
           <img
             src="https://cdn-icons-png.flaticon.com/512/10247/10247167.png"
             style="width: 40%"
@@ -65,14 +65,14 @@
       </div>
 
       <div class="column">
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="clay.html" target="_blank">
           <img
             src="https://cdn-icons-png.flaticon.com/512/1723/1723713.png"
             style="width: 40%"
         /></a>
         <p>Large-scale clay 3D printing</p>
 
-        <a href="https://community.rstudio.com" target="_blank">
+        <a href="digifab" target="_blank">
           <img
             src="https://cdn-icons-png.flaticon.com/512/8932/8932109.png"
             style="width: 40%"
