--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     Feel free to contact me in any of the following ways.<br /><br />
     <hr />
     <p>
-      <b>Email:</b> kerryqian@hotmail.com <br />
+      <b>Email &#9993:</b> kerryqian@hotmail.com <br />
       <b>Linkedin:</b>
       <a target="_blank" href="https://www.linkedin.com/in/kerryqian/"
         >https://www.linkedin.com/in/kerryqian/</a
@@ -38,7 +38,8 @@
       <b>GitHub:</b>
       <a target="_blank" href="https://github.com/KerryQian"
         >https://github.com/KerryQian
-      </a>
+      </a><br>
+      &#x1F4CD Sydney, Australia
     </p>
     <hr />
   </body>
