--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </tr>
           <tr>
             <td>AI <br>AR / VR<br>Big data<br>Digital fabrication<br>Generative desgin<br>Problem solving<br>Urban design</td>
-            <td>Piano<br>Basketball<br>Video games<br>Gym<br>Travelling</td>
+            <td>Piano<br>Basketball<br>Video games<br>Gym<br>Travelling<br>Fishing</td>
           </tr>
           
         </table>
