updates to pdf and quals

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <h3>About Me</h3>
     <div class="container">
       <p>
-        I am currently in my final year of studying a Bachelors of Computational
-        Design at the University of New South Wales. Heres a little bit about
+        I graduated with a Bachelors of Computational
+        Design (Distinction) from the University of New South Wales and have more than a year of professional experience with digital modelling and Computational Design automation. Heres a little bit about
         me: <br /><br>
         <table style="width:100%">
           <tr>
@@ -68,5 +68,5 @@
     <div class="spacer"></div>
     <div class="spacer"></div>
   </body>
-  <footer>Last updated on: April 2023</footer>
+  <footer>Last updated on: Februrary 2024</footer>
 </html>
