--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <p>
         I graduated with a Bachelors of Computational
-        Design (Distinction) from the University of New South Wales and have more than a year of professional experience with digital modelling and Computational Design automation. Heres a little bit about
+        Design (Distinction) from the University of New South Wales and have more than a year of professional experience in the AEC industry. Heres a little bit about
         me: <br /><br>
         <table style="width:100%">
           <tr>
