--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <h3>About Me</h3>
     <div class="container">
       <p>
-        I graduated with a Bachelors of Computational
-        Design (Distinction) from the University of New South Wales and have more than a year of professional experience in the AEC industry. Heres a little bit about
+        I graduated with a Bachelors of Computational Design (Distinction) from the University of New South Wales and have more than a year of professional experience in the AEC industry. Heres a little bit about me:
         me: <br /><br>
         <table style="width:100%">
           <tr>
@@ -56,7 +55,7 @@
         <br><br>
         If you wish to find out more about my experience and qualifications,
         here is my
-        <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
+        <a href="C:\Users\kerry\OneDrive\Resume" target="_blank">resume</a>!
       </p>
     </div>
     <div class="spacer"></div>
@@ -68,5 +67,5 @@
     <div class="spacer"></div>
     <div class="spacer"></div>
   </body>
-  <footer>Last updated on: Februrary 2024</footer>
+  <footer>Last updated on: April 2023</footer>
 </html>
