--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <br><br>
         If you wish to find out more about my experience and qualifications,
         here is my
-        <a href="C:\Users\kerry\OneDrive\Resume" target="_blank">resume</a>!
+        
+        <a href="Kerry- Resume.pdf" target="_blank">resume</a>!
       </p>
     </div>
     <div class="spacer"></div>
