--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <p>
         I graduated with a Bachelors of Computational
-        Design (Distinction) from the University of New South Wales and have more than a year of professional experience in the AEC industry. Heres a little bit about
+        Design (Distinction) from the University of New South Wales and have over two years of professional experience in the AEC industry. Heres a little bit about
         me: <br /><br>
         <table style="width:100%">
           <tr>
@@ -48,7 +48,7 @@
             <th>Hobbies</th>
           </tr>
           <tr>
-            <td>AI <br>AR / VR<br>Big data<br>Digital fabrication<br>Generative desgin<br>Problem solving<br>Urban design</td>
+            <td>AI <br>AR / VR<br>Big data<br>Digital fabrication<br>Generative desgin<br>Problem solving<br>Urban design<br>Fullstack dev</td>
             <td>Piano<br>Basketball<br>Video games<br>Gym<br>Travelling<br>Fishing</td>
           </tr>
           
